# ghostspeak

./: .eslintrc.js  .gitignore  .prettierrc  0.0.1_DEPLOYMENT_COMPLETE.md  0.0.1_PUBLISHING_READINESS_REPORT.md  AGENT_CONNECTIVITY_ARCHITECTURE.md  Anchor.toml  BUSINESS_LOGIC_ANALYSIS.md  CI_CD_FIXES_SUMMARY.md  CLAUDE.md  CONNECTION_GUIDE.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  DEPLOYMENT_READY_STRUCTURE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY_0.0.1.md  Dockerfile.anchor  EDGE_CASE_SECURITY_ANALYSIS.md  ENHANCED_ARCHITECTURE_GUIDE.md  FINAL_CODE_VERIFICATION.md  FIXES_COMPLETE.md  HONEST_FEATURE_ASSESSMENT.md  IMMEDIATE_ACTION_PLAN.md  INTEGRATION_COMPLETION_STATUS.md  JUPITER_SWAP_VERIFICATION_REPORT.md  PHASE_1_VERIFICATION_COMPLETE.md  PHASE_2_COMPLETION_REPORT.md  PLATFORM_ISSUES_DATASHEET.md  PROTOCOL_CONNECTION_GUIDE.md  README.md  SECURITY-FIXES.md  SOLANA_SDK_COMPLIANCE_ASSESSMENT.md  UX_VALIDATION_COMPLETE.md  WEB3JS_V2_MIGRATION_RULES.md  WEB3JS_V2_REGRESSION_PREVENTION.md  bunfig.toml  cli-demo.ts  comprehensive-qa-report.json  demo-integration.ts  (+12 more)
.claude/: CLAUDE.md  IMPLEMENTATION_GUIDE.md  README.md  ascii-banners.md
.claude/architecture/: 0004-complete-platform-architecture.md
.claude/checklists/: production-ready.md
.claude/commands/: concept-transform.md  generate-with-validation.md  research-mode.md  role-switch.md  swarm-start.md  technical-review.md  worktree-management.md
.claude/cursor/: README.md  cursor-configuration.md  getting-started-guide.md  setup-cursor-swarm.sh
.claude/memories/: memory-index.md
.claude/memory/: README.md
.claude/patterns/: claude-swarm-patterns.md  self-check.md  swarm-coordination.md
.claude/protocols/: file-generation.md  mcp-coordination.md  root-cause.md  task-delegation.md  technical-review.md
.claude/workflows/: concept-to-code.md  multi-agent-development.md  (+1 more)
.cursor/: MASTER_IMPLEMENTATION_GUIDE.md  README.md
.idx/: dev.nix
.scripts/: core-fixer.js  core-functionality-fixer.js  enhanced-fixer.js  final-syntax-fixer.js  fix-remaining-errors-v2.js  fix-remaining-errors.js  precise-fixer.js  run-all-fixes.js
adr/: 0004-complete-platform-architecture.md  0005-agent-nft-architecture-compliance.md
config/: program-ids.ts
docs/: API_DOCUMENTATION.md  CHANGELOG.md  CLI_DOCUMENTATION.md  README.md  RUST_SDK_DOCUMENTATION.md  rust-documentation-status.md  rust-documentation-summary.md  rust-documentation.md
programs/podai/: Cargo.toml
programs/podai/src/: lib.rs  state.rs
scripts/: generate-docs.ts
security/: audit-preparation.md
test-ledger/: genesis.bin.failed  genesis.tar.bz2.failed
tests/: README.md  comprehensive-security.test.ts  comprehensive-verification.cjs  compression-proof.test.ts  dynamic-product-minting.test.ts  feature-parity.test.js  final-verification-report.md  manual-verification-report.md  merkle-tree.test.ts  on-chain-verification.test.ts  pda-validation.test.ts  pda-validation.test.ts.OLD-V1  performance-benchmark.test.ts  proof-of-concept-validation.ts  run-verification.ts  security-validation-summary.md  task-186-completion-report.md  test-real-operations.cjs  test-utils.ts  verify-onchain-status.cjs
(+76 files in other folders)
