[workspace]
members = [
    "packages/core",
    "packages/sdk-rust",
]
resolver = "2"

[workspace.dependencies]
# Anchor framework - production stable 2025
anchor-lang = { version = "0.31.1", default-features = false, features = ["init-if-needed"] }
anchor-spl = "0.31.1"

# SPL and compression - aligned versions
spl-account-compression = { version = "1.0.0", features = ["cpi"], default-features = false }
spl-concurrent-merkle-tree = "1.0.0"

# Solana ecosystem - LATEST COMPATIBLE VERSIONS (2025 stable)
solana-program = "2.1.15"
solana-sdk = "2.1.15"
solana-client = "2.1.15"
solana-transaction-status = "2.1.15"
solana-program-test = "2.1.15"

# Cryptography
blake3 = "1.5.0"

# Async and utilities
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
anyhow = "1.0.98"

borsh = "1.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
codegen-units = 1 