[package]
name = "podai"
version = "0.1.0"
description = "podAI Marketplace: Revolutionary AI Agent Platform"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token = "8.0.0"
spl-token-2022 = "9.0.0"
spl-associated-token-account = "7.0.0"
# spl-account-compression = "0.3.0"
# spl-concurrent-merkle-tree = "0.2.0"
spl-token-metadata-interface = "0.7.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
blake3 = "1.5.0"
bs58 = "0.5.1"
sha2 = "0.10.9"
sha3 = "0.10.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bytemuck = { version = "1.23.1", features = ["derive"] }
log = "0.4.27" 